--- a/bloc_note_flutter/android/app/src/main/AndroidManifest.xml
+++ b/bloc_note_flutter/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.bloc_note_flutter">
    <application
+        android:requestLegacyExternalStorage="true"
         android:label="bloc_note_flutter"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
