--- a/bloc_note_flutter/ios/Runner/Info.plist
+++ b/bloc_note_flutter/ios/Runner/Info.plist
@@ -24,6 +24,10 @@
 	<string>$(FLUTTER_BUILD_NUMBER)</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Prendre une photo dans la galerie</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Prendre une photo avec la caméra</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
